Add the frontend part

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,8 +1,46 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  background-color: #9c88ff;
+  gap: 16px;
+}
+
+.h1 {
+  color: white;
+}
+
+.input {
+  padding: 12px 24px;
+  width: 400px;
+  border-radius: 8px;
+  border: none;
+  font-size: 16px;
+  outline: none;
+}
+
+.input:hover {
+  box-shadow: 0 0 5pt 0.5pt #D3D3D3;
+}
+
+.input:focus {
+  box-shadow: 0 0 5pt 2pt #D3D3D3;
+  outline-width: 0px;
+}
+
+.button {
+  padding: 12px 16px;
+  border: 1px solid #273c75;
+  background-color: #273c75;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+  border-radius: 4px;
+}
+
+.button:hover {
+  background-color: #192a56;
 }
