--- a/app/page.module.css
+++ b/app/page.module.css
@@ -45,8 +45,28 @@
   background-color: #192a56;
 }
 
-.bottom {
-  position: fixed;
+.button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.button:disabled:hover {
+  background-color: #273c75;
+}
+
+.bottom-left {
+  position: absolute;
   bottom: 8px;
   left: 16px;
+}
+
+.bottom-right {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
+
+.success {
+  color: white;
+  font-size: 18px;
 }
